...
                )
            }
        }

        NavigationBar {
            NavigationBarItem(
                icon = { Icon(Icons.Default.Search, contentDescription = "Поиск") },
                label = { Text("Поиск") },
                selected = selectedTab == CookMateRoutes.SEARCH,
                onClick = {
                    setSelectedTab(CookMateRoutes.SEARCH)
                    navController.navigate(CookMateRoutes.SEARCH) {
                        popUpTo(navController.graph.startDestinationId)
...
